k8s/metric.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: parsoid-metric-feeder
  name: parsoid-metric-feeder
  namespace: ${ns}
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: parsoid-metric-feeder
  type: ClusterIP

---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: parsoid-metric-feeder
  namespace: ${ns}
spec:
  selector:
    matchLabels:
      app: parsoid-metric-feeder
  replicas: ${replicas}
  template:
    metadata:
      labels:
        app: parsoid-metric-feeder
      annotations:
        wikia.com/keys: '{"es_logs": {"container_name": "parsoid", "es_index": "parsoid-metric-feeder"}}'
    spec:
      containers:
      - name: parsoid-metric-feeder
        image: ${imageName}:${version}
        resources:
          limits:
            memory: 3Gi
          requests:
            cpu: 500m
            memory: 1.5Gi
        livenessProbe:
          httpGet:
            path: /
            port: 8000
        readinessProbe:
          httpGet:
            path: /
            port: 8000
        ports:
        - containerPort: 8000

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: parsoid-metric-feeder
  namespace: ${ns}
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: ${ns}.parsoid-metric-feeder.${env}.k8s.wikia.net
    http:
      paths:
      - path:
        backend:
          serviceName: parsoid-metric-feeder
          servicePort: 80
  - host: ${env}.k8s.wikia.net
    http:
      paths:
      - path: /parsoid-metric-feeder
        backend:
          serviceName: parsoid-metric-feeder
          servicePort: 80
