k8s/parsoid.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: parsoid
    team: iwing
  name: parsoid
  namespace: ${ns}
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: parsoid
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parsoid
  namespace: ${ns}
  labels:
    team: iwing
spec:
  selector:
    matchLabels:
      app: parsoid
  replicas: ${replicas}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  progressDeadlineSeconds: 120
  template:
    metadata:
      labels:
        app: parsoid
        team: iwing
      annotations:
        wikia.com/keys: '{"es_logs": {"container_name": "parsoid", "es_index": "parsoid"}}'
    spec:
      containers:
      - name: parsoid
        image: ${imageName}:${version}
        resources:
          limits:
            memory: 3Gi
          requests:
            cpu: 500m
            memory: 1.5Gi
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 12
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
        ports:
        - containerPort: 8000

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: parsoid
  namespace: ${ns}
  labels:
    team: iwing
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: ${ns}.parsoid-cache
    http:
      paths:
      - path:
        backend:
          serviceName: parsoid
          servicePort: 80
  - host: ${ns}.parsoid.${env}.k8s.wikia.net
    http:
      paths:
      - path:
        backend:
          serviceName: parsoid
          servicePort: 80
  - host: ${ns}.${env}.k8s.wikia.net
    http:
      paths:
      - path: /parsoid
        backend:
          serviceName: parsoid
          servicePort: 80
